# dotfiles

./: .bash_aliases  .ctags  .gvimrc  .screenrc  .spacemacs  .tmux.conf  .vimrc  .vimrc-big  .vimrc-full  .vimrc-minimal  README.md  README.org
.byobu/: .gitignore  .tmux.conf  keybindings  keybindings.tmux  profile.tmux  status
.byobu/layouts/: abril
.emacs.d/private/wamaral/: packages.el
.vim/: .gitignore  init.vim
.vim/ftdetect/: jbuilder.vim
.vim/ftplugin/: ruby.vim
.xmonad/: .gitignore  build  stack.yaml  taffybar.hs  wamaral-xmonad.cabal  xmonad-wamaral.cabal  xmonad.hs
.xmonad/Prompt/: YubiOath.hs
fish/: config.fish
fish/functions/: ca.fish  fish_prompt.fish  fish_user_key_bindings.fish
kde/konsole/: Shell.profile  Wagner.colorscheme
liquidprompt/: liquid_newline.ps1  liquidpromptrc
rails/: .gitignore
roxterm/: .gitignore  Global
roxterm/Colours/: Wagner
roxterm/Profiles/: Default
roxterm/Shortcuts/: Wagner
