name:                wamaral-xmonad
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/wamaral/xmonad-run#readme
license:             BSD3
license-file:        LICENSE
author:              Wagner Amaral
maintainer:          wamaral@wamaral.org
copyright:           2016 Wagner Amaral
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable wamaral-xmonad
  hs-source-dirs:      .
  main-is:             xmonad.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , xmonad >= 0.13
                     , xmonad-contrib >= 0.13
                     , containers
                     , fuzzy
                     , utf8-string
                     , taffybar >= 0.4.6
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wamaral/wamaral-xmonad
