name:                xmonad-wamaral
version:             0.13
synopsis:            Custom XMonad build
homepage:            https://github.com/wamaral/dotfiles
license:             BSD3
license-file:        LICENSE
author:              Wagner Amaral
maintainer:          wamaral@wamaral.org
copyright:           2016 Wagner Amaral
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable xmonad-wamaral
  hs-source-dirs:      .
  main-is:             xmonad.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , xmonad >= 0.13
                     , xmonad-contrib >= 0.13
                     , containers
                     , fuzzy
                     , utf8-string
                     , taffybar >= 0.4.6
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wamaral/dotfiles
